--- a/_includes/about.html
+++ b/_includes/about.html
@@ -15,7 +15,7 @@
   You can get more info on my life <a href="#cv">here</a>.</p>
 
   <p>Personally, I am interested in a wide range of topics and try to write
-  about it on my blog. If you have any questions, don't hesitate to send me a
+  about it on my <a href="/blog">blog</a>. If you have any questions, don't hesitate to send me a
   <a href="mailto:niklas.semmler@mailbox.org">mail</a>.</p>
 
   <!--<p>The focus of my PhD is set on optimizing datacenter resource usage for big data
