--- a/_includes/research.html
+++ b/_includes/research.html
@@ -4,8 +4,8 @@
       w3-margin-right w3-xxlarge w3-text-teal"></i>My Research</h2>
 <iframe width="560" height="315"
   src="https://www.youtube.com/embed/ZiW9jMFYj-4" frameborder="0"
-  allow="accelerometer; autoplay; encrypted-media; gyroscope;
-  picture-in-picture" allowfullscreen></iframe><br>
+  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen></iframe><br>
 
 <ul>
   <li class="pub"><b>Online replication strategies for distributed data stores</b><br>
