resize youtube video

--- a/_includes/research.html
+++ b/_includes/research.html
@@ -2,10 +2,17 @@
 <div class="w3-container w3-card w3-white w3-margin-bottom" id="research" style="margin-top:75px">
   <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-flask fa-fw
       w3-margin-right w3-xxlarge w3-text-teal"></i>My Research</h2>
-<iframe width="560" height="315"
+
+<div class="auto-resizable-iframe">
+  <div>
+<iframe top="0" left="0" width="100%" height="100%"
   src="https://www.youtube.com/embed/ZiW9jMFYj-4" frameborder="0"
-  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen></iframe><br>
+  allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen></iframe>
+  </div>
+</div>
+<br>
+
 
 <ul>
   <li class="pub"><b>Online replication strategies for distributed data stores</b><br>
