moving more style items into css file

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -8,14 +8,13 @@
       </div>
     <!--<p class="w3-text-grey">PhD Candidate</p>-->
     <div class="w3-panel w3-large">
-      <a class="" href="http://linkedin.com/in/nsemmler" style="text-decoration: none">
+      <a class="icon" href="http://linkedin.com/in/nsemmler">
         <i class="fa fa-linkedin w3-hover-white">&nbsp;&nbsp;</i>
       </a>
-      <a class="" href="http://github.com/metaswirl" style="text-decoration: none">
+      <a class="icon" href="http://github.com/metaswirl">
         <i class="fa fa-github w3-hover-white">&nbsp;&nbsp;</i>
       </a>
-      <a class="" href="mailto:niklas.semmler@mailbox.org"
-        style="text-decoration: none">
+      <a class="icon" href="mailto:niklas.semmler@mailbox.org">
         <i class="fa fa-at w3-hover-white"></i>
       </a>
     </div>
@@ -44,11 +43,10 @@
   <a href="javascript:void(0)" class="w3-button w3-teal w3-margin-right" onclick="w3_open()">☰</a>
   <span>Niklas Semmler</span>
   <div class="w3-right">
-    <a class="" href="http://linkedin.com/in/nsemmler" style="text-decoration: none">
+    <a class="icon" href="http://linkedin.com/in/nsemmler">
       <i class="fa fa-linkedin w3-hover-opacity"></i>
     </a>
-    <a class="" href="mailto:niklas.semmler@mailbox.org"
-      style="text-decoration: none">
+    <a class="icon" href="mailto:niklas.semmler@mailbox.org">
       <i class="fa fa-at w3-hover-opacity"></i>
     </a>
     <!--<img src="https://www.net.t-labs.tu-berlin.de/~nsemmler/pics/pic2.png"
