--- a/_includes/research.html
+++ b/_includes/research.html
@@ -14,21 +14,21 @@
 <br>
 
 
-<ul>
-  <li class="pub"><b>Online replication strategies for distributed data stores</b><br>
+<ul class="publications">
+  <li><b>Online replication strategies for distributed data stores</b><br>
     <i>Authors:</i> Niklas Semmler, Georgios Smaragdakis, Anja Feldmann<br>
     <i>Conference:</i> Open Journal of Internet Of Things<br>
     <a href="/assets/files/nsemmler_2019_vliot.pdf">
       <i class="fa fa-file-pdf-o"> Download PDF</i>
     </a>
-  <li class="pub"><b>Distributed Mega-Datasets: The Need for Novel Computing
+  <li><b>Distributed Mega-Datasets: The Need for Novel Computing
       Primitives</b><br>
     <i>Authors:</i> Niklas Semmler, Georgios Smaragdakis, Anja Feldmann<br>
     <i>Conference:</i> 2019 IEEE 39th International Conference on Distributed Computing Systems</br>
     <a href="/assets/files/nsemmler_2019_icdcs.pdf">
       <i class="fa fa-file-pdf-o"> Download PDF</i>
     </a>
-  <li class="pub"><b>PaDIS emulator: an emulator to evaluate CDN-ISP collaboration</b><br>
+  <li><b>PaDIS emulator: an emulator to evaluate CDN-ISP collaboration</b><br>
     <i>Authors:</i> Ingmar Poese, Benjamin Frank, Simon Knight, Niklas Semmler,
     Georgios Smaragdakis<br>
     <i>Conference:</i> Proceedings of the ACM SIGCOMM 2012<br>
