--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -4,7 +4,8 @@ w3-main {
   margin-left:220px;
   margin-right:40px;
 }
-.pub { margin: 1em 0; }
+.publications li { margin: 1em 0; }
+.icon { text-decoration: none; }
 
 .auto-resizable-iframe {
   max-width: 420px;
