--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -43,13 +43,14 @@
   <a href="javascript:void(0)" class="w3-button w3-teal w3-margin-right" onclick="w3_open()">☰</a>
   <span>Niklas Semmler</span>
   <div class="w3-right">
-    <a class="icon" href="http://linkedin.com/in/nsemmler">
-      <i class="fa fa-linkedin w3-hover-opacity"></i>
-    </a>
     <a class="icon" href="mailto:niklas.semmler@mailbox.org">
       <i class="fa fa-at w3-hover-opacity"></i>
     </a>
-    <!--<img src="https://www.net.t-labs.tu-berlin.de/~nsemmler/pics/pic2.png"
+    <!--
+    <a class="icon" href="http://linkedin.com/in/nsemmler">
+      <i class="fa fa-linkedin w3-hover-opacity"></i>
+    </a>
+    <img src="https://www.net.t-labs.tu-berlin.de/~nsemmler/pics/pic2.png"
       style="width:5%;" class="w3-circle">-->
   </div>
 
