--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,17 +2,17 @@
 <div class="w3-container w3-card w3-white w3-margin-bottom" id="about" style="margin-top:75px">
   <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-th-large fa-fw
       w3-margin-right w3-xxlarge w3-text-teal"></i>About Me</h2>
-  <p>Hi there, I am Niklas a PhD student at SAP SE in Potsdam and expect to graduate in 2020.</p>
+  <p>I am Niklas, a PhD student at SAP SE in Potsdam and expect to graduate in 2020.</p>
   <p>I focus on data management issues for the future Industrial Internet of
   Things. If you want to know more, head over to the <a href="#research">research</a>
   section.</p>
-  <p>During the long run of my PhD I helped to organize an introduction to
+  <p>During my PhD I helped to organize an introduction to
   programming course with ~800 students and became a member in the <a href="https://softwarecampus.de/en/">Software
-    Campus</a>, a German programme that supports PhD with a 2-year leadership
+    Campus</a>, a German program that supports PhD with a 2-year leadership
   programme. As member of the <a href="http://www.bbdc.berlin/home/">Berlin Big
-  Data Center (BBDC)</a> I studied the performance of Apache Flink for straggling
+  Data Center (BBDC)</a> project I studied the performance of Apache Flink for straggling
   tasks.
-  You can get more info on my life <a href="#cv">here</a>.</p>
+  You can get more info on <a href="#cv">me</a>.</p>
 
   <p>Personally, I am interested in a wide range of topics and try to write
   about it on my <a href="/blog">blog</a>. If you have any questions, don't hesitate to send me a
