--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -15,7 +15,7 @@
         <i class="fa fa-github w3-hover-white">&nbsp;&nbsp;</i>
       </a>
       <a class="icon" href="mailto:niklas.semmler@mailbox.org">
-        <i class="fa fa-at w3-hover-white"></i>
+        <i class="fa fa-envelope w3-hover-white"></i>
       </a>
     </div>
   </div>
@@ -44,14 +44,15 @@
   <span>Niklas Semmler</span>
   <div class="w3-right">
     <a class="icon" href="mailto:niklas.semmler@mailbox.org">
-      <i class="fa fa-at w3-hover-opacity"></i>
+      <i class="fa fa-envelope w3-hover-opacity"></i>
     </a>
-    <!--
     <a class="icon" href="http://linkedin.com/in/nsemmler">
       <i class="fa fa-linkedin w3-hover-opacity"></i>
     </a>
+    <!--
     <img src="https://www.net.t-labs.tu-berlin.de/~nsemmler/pics/pic2.png"
-      style="width:5%;" class="w3-circle">-->
+      style="width:5%;" class="w3-circle">
+    -->
   </div>
 
 </header>
