--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,5 +1,6 @@
 html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 body { max-width:1200px }
+header span { font-size: 20px }
 w3-main { 
   margin-left:220px;
   margin-right:40px;
