updated material for edgesys 2020

--- a/_includes/research.html
+++ b/_includes/research.html
@@ -3,18 +3,18 @@
   <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-flask fa-fw
       w3-margin-right w3-xxlarge w3-text-teal"></i>My Research</h2>
 
-<div class="auto-resizable-iframe">
-  <div>
-<iframe top="0" left="0" width="100%" height="100%"
-  src="https://www.youtube.com/embed/ZiW9jMFYj-4" frameborder="0"
-  allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen></iframe>
-  </div>
-</div>
-<br>
-
 
 <ul class="publications">
+  <li><b>Edge Replication Strategies for Wide-Area Distributed Processing</b><br>
+    <i>Authors:</i> Niklas Semmler, Matthias Rost, Georgios Smaragdakis, Anja Feldmann<br>
+    <i>Conference:</i> Edgesys 2020<br>
+    <a href="http://inet.tu-berlin.de/~nsemmler/media/edge_replication_edgesys2020.pdf">
+      <i class="fa fa-file-pdf-o"> Download PDF</i>
+    </a>
+    <a
+      href="http://inet.tu-berlin.de/~nsemmler/media/edge_replication_edgesys2020_slides.pdf">
+      <i class="fa fa-file-pdf-o"> Download Slides</i>
+    </a>
   <li><b>Online replication strategies for distributed data stores</b><br>
     <i>Authors:</i> Niklas Semmler, Georgios Smaragdakis, Anja Feldmann<br>
     <i>Conference:</i> Open Journal of Internet Of Things<br>
@@ -36,4 +36,15 @@
       <i class="fa fa-file-pdf-o"> Download PDF</i>
     </a>
 </ul>
+
+<div class="auto-resizable-iframe">
+  <div>
+<iframe top="0" left="0" width="100%" height="100%"
+  src="https://www.youtube.com/embed/ZiW9jMFYj-4" frameborder="0"
+  allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen></iframe>
+  </div>
+</div>
+<br>
+
 </div>
