add new job info

--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -1,14 +1,28 @@
 <!-- Curriculum Vitae -->
+
+
 <div class="w3-container w3-card w3-white w3-margin-bottom" id="cv" style="margin-top:75px">
   <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-user fa-fw
         w3-margin-right w3-xxlarge w3-text-teal"></i>Curriculum Vitae</h2>
   <div class="w3-container">
+    <h5 class="w3-opacity"><b>Developer / SAP SE</b></h5>
+    <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw
+        w3-margin-right"></i>May 2021 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+    <ul>
+      <li>Integration Monitoring Team
+      <li>Development of a data structure for request correlation
+    </ul>
+    <hr>
+  </div>
+  <div class="w3-container">
     <h5 class="w3-opacity"><b>PhD Candidate / SAP SE</b></h5>
     <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw
-        w3-margin-right"></i>Nov 2017 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+        w3-margin-right"></i>Nov 2017 - Dec 2020</h6>
     <ul>
       <li>Study of adaptive replication on the basis of real-world ERP database
-        trace.
+        trace
+      <li>Load-shedding strategies for resource constrained data stream
+        processors based on Apache Flink
     </ul>
     <hr>
   </div>
@@ -17,8 +31,8 @@
     <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw
         w3-margin-right"></i>Nov 2016 - Nov 2017</h6>
     <ul>
-      <li>Analysis of the network usage of a distributed database.
-      <li>Implemented request tracing into the distributed database.
+      <li>Analysis of the network usage of a distributed database
+      <li>Implemented request tracing into the distributed database
     </ul>
     <hr>
   </div>
@@ -28,13 +42,13 @@
         w3-margin-right"></i>Dec 2014 - Nov 2016</h6>
     <ul>
       <li>Alumni of the <a href="https://softwarecampus.de/en/">Software
-    Campus</a> programme.
+    Campus</a> programme
       <li>Teaching Assistant for the course fundamentals of programming in C
-        (~800 students).
+        (~750 students)
         <li>Research assistant in the <a
             href="http://www.bbdc.berlin/home/">Berlin Big Data Center
             (BBDC)</a> with focus on
-        improving the performance of Apache Flink in widely distributed scenarios.
+        improving the performance of Apache Flink in widely distributed scenarios
     </ul>
     <hr>
   </div>
@@ -44,8 +58,8 @@
         w3-margin-right"></i>Oct 2012 - Oct 2014</h6>
     <ul>
       <li>Master thesis on translating router configurations between devices at
-        Cisco (previously Tail-f).
-      <li>First year at TU Berlin, second year at KTH in Stockholm.
+        Cisco (previously Tail-f)
+      <li>First year at TU Berlin, second year at KTH in Stockholm
     </ul>
     <hr>
   </div>
@@ -57,8 +71,8 @@
   </div>
     <ul>
       <li>Bachelor thesis on modelling movement patterns of a slime mold (an
-        acelluar organism).
-      <li>First two years at RU (Nijmegen), last two years at UvA (Amsterdam).
+        acelluar organism)
+      <li>First two years at RU (Nijmegen), last two years at UvA (Amsterdam)
     </ul>
     <hr>
 </div>
