restructure to focus on cv

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -23,15 +23,15 @@
     <a href="/index.html#about" onclick="w3_close()"
       class="w3-bar-item w3-button w3-padding w3-hover-white">
       <i class="fa fa-th-large fa-fw w3-margin-right"></i>About</a> 
-    <a href="/index.html#research" onclick="w3_close()"
-      class="w3-bar-item w3-button w3-padding w3-hover-white">
-      <i class="fa fa-flask fa-fw w3-margin-right"></i>Research</a> 
     <a href="/index.html#cv" onclick="w3_close()"
       class="w3-bar-item w3-button w3-padding w3-hover-white">
       <i class="fa fa-user fa-fw w3-margin-right"></i>CV</a> 
-    <a href="/blog.html" onclick="w3_close()"
+    <a href="/index.html#research" onclick="w3_close()"
       class="w3-bar-item w3-button w3-padding w3-hover-white">
-      <i class="fa fa-coffee fa-fw w3-margin-right"></i>Blog</a> 
+      <i class="fa fa-flask fa-fw w3-margin-right"></i>Research</a> 
+    <!--<a href="/blog.html" onclick="w3_close()"
+      class="w3-bar-item w3-button w3-padding w3-hover-white">
+    <i class="fa fa-coffee fa-fw w3-margin-right"></i>Blog</a> -->
     <a href="/assets/files/nsemmler.vcf"
       class="w3-bar-item w3-button w3-padding w3-hover-white">
       <i class="fa fa-envelope fa-fw w3-margin-right"></i>VCARD</a>
