bring website up to date

--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -5,9 +5,30 @@
   <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-user fa-fw
         w3-margin-right w3-xxlarge w3-text-teal"></i>Curriculum Vitae</h2>
   <div class="w3-container">
+    <h5 class="w3-opacity"><b>Developer / Snowflake Inc.</b></h5>
+    <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw
+        w3-margin-right"></i>July 2022 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+    <ul>
+      <li>Streaming team
+      <li>Focus: Observability of dynamic tables
+    </ul>
+    <hr>
+  </div>
+  <div class="w3-container">
+    <h5 class="w3-opacity"><b>Developer / Ververica GmbH</b></h5>
+    <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw
+        w3-margin-right"></i>November 2021 - May 2022</h6>
+    <ul>
+      <li>DeCo - Deployment &amp; Coordination team
+      <li>Improvements of adaptive scheduler &amp; distributed shutdown
+        behavior
+    </ul>
+    <hr>
+  </div>
+  <div class="w3-container">
     <h5 class="w3-opacity"><b>Developer / SAP SE</b></h5>
     <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw
-        w3-margin-right"></i>May 2021 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+        w3-margin-right"></i>May 2021 - November 2021</h6>
     <ul>
       <li>Integration Monitoring Team
       <li>Development of a data structure for request correlation
