--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -17,10 +17,10 @@
   <div class="w3-container">
     <h5 class="w3-opacity"><b>Developer / Ververica GmbH</b></h5>
     <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw
-        w3-margin-right"></i>November 2021 - May 2022</h6>
+        w3-margin-right"></i>December 2021 - May 2022</h6>
     <ul>
       <li>DeCo - Deployment &amp; Coordination team
-      <li>Improvements of adaptive scheduler &amp; distributed shutdown
+      <li>Improvements of Apache Flink's adaptive scheduler &amp; distributed shutdown
         behavior
     </ul>
     <hr>
