small site improvement

--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -5,33 +5,33 @@
   <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-user fa-fw
         w3-margin-right w3-xxlarge w3-text-teal"></i>Curriculum Vitae</h2>
   <div class="w3-container">
-    <h5 class="w3-opacity"><b>Developer / Snowflake Inc.</b></h5>
+    <h5 class="w3-opacity"><b>Developer / Snowflake Inc. &mdash; Dynamic Tables</b></h5>
     <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw
         w3-margin-right"></i>July 2022 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
     <ul>
-      <li>Streaming team
-      <li>Focus: Observability of dynamic tables
+      <li>Compiler rewrite rules for faster (10x) incremental outer joins
+      <li>Framework for benchmarking incrementalizations
+      <li>Customer workload tracking &amp; alerting (Micrometer, Grafana)
+      <li>Added and exposed internal diagnostics (Information Schema)
     </ul>
     <hr>
   </div>
   <div class="w3-container">
-    <h5 class="w3-opacity"><b>Developer / Ververica GmbH</b></h5>
+    <h5 class="w3-opacity"><b>Developer / Ververica GmbH &mdash; Deployment &amp; Coordination</b></h5>
     <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw
         w3-margin-right"></i>December 2021 - May 2022</h6>
     <ul>
-      <li>DeCo - Deployment &amp; Coordination team
       <li>Improvements of Apache Flink's adaptive scheduler &amp; distributed shutdown
-        behavior
+        behavior (10x faster)
     </ul>
     <hr>
   </div>
   <div class="w3-container">
-    <h5 class="w3-opacity"><b>Developer / SAP SE</b></h5>
+    <h5 class="w3-opacity"><b>Developer / SAP SE &mdash; Data Intelligence</b></h5>
     <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw
         w3-margin-right"></i>May 2021 - November 2021</h6>
     <ul>
-      <li>Integration Monitoring Team
-      <li>Development of a data structure for request correlation
+      <li>Development of a data structure for request correlation across components
     </ul>
     <hr>
   </div>
