--- a/_includes/research.html
+++ b/_includes/research.html
@@ -5,6 +5,24 @@
 
 
 <ul class="publications">
+  <li><b>Streaming Democratized: Ease Across the Latency Spectrum with Delayed View Semantics and Snowflake Dynamic Tables</b><br>
+    <i>Authors:</i> Daniel Sotolongo, Daniel Mills, Tyler Akidau, Anirudh Santhiar, Attila-Péter Tóth, Ilaria Battiston, Ankur Sharma, Botong Huang, Boyuan Zhang, Dzmitry Pauliukevich, Enrico Sartorello, Igor Belianski, Ivan Kalev, Lawrence Benson, Leon Papke, Ling Geng, Matt Uhlar, Nikhil Shah, Niklas Semmler, Olivia Zhou, Saras Nowak, Sasha Lionheart, Till Merker, Vlad Lifliand, Wendy Grus, Yi Huang, Yiwen Zhu<br>
+    <i>Conference:</i> SIGMOD 2025<br>
+    <a href="https://arxiv.org/abs/2504.10438">
+      <i class="fa fa-link"> arXiv</i>
+    </a>
+  <li><b>Continuous Data Ingestion and Transformation in Snowflake</b><br>
+    <i>Authors:</i> Tyler Akidau, Fabian Hueske, Konstantinos Kloudas, Leon Papke, Niklas Semmler, Jan Sommerfeld<br>
+    <i>Conference:</i> DEBS 2024<br>
+    <a href="https://dl.acm.org/doi/abs/10.1145/3629104.3672430">
+      <i class="fa fa-link"> ACM</i>
+    </a>
+  <li><b>What’s the diﬀerence?</b><br>
+    <i>Authors:</i> Tyler Akidau, Paul Barbier, Istvan Cseri, Fabian Hueske, Tyler Jones, Sasha Lionheart, Daniel Mills, Dzmitry Pauliukevich, Lukas Probst, Niklas Semmler, Dan Sotolongo, Boyuan Zhang<br>
+    <i>Conference:</i> SIGMOD 2023<br>
+    <a href="https://dl.acm.org/doi/abs/10.1145/3589776">
+      <i class="fa fa-link"> ACM</i>
+    </a>
   <li><b>Edge Replication Strategies for Wide-Area Distributed Processing</b><br>
     <i>Authors:</i> Niklas Semmler, Matthias Rost, Georgios Smaragdakis, Anja Feldmann<br>
     <i>Conference:</i> Edgesys 2020<br>
