section name change

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,7 +2,7 @@
 <div class="w3-container w3-card w3-white w3-margin-bottom" id="about" style="margin-top:75px">
   <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-th-large fa-fw
       w3-margin-right w3-xxlarge w3-text-teal"></i>About Me</h2>
-  <p>Hi there! Welcome to my site!</p>
+  <p>Hi there and welcome to my site!</p>
   <p>I am a Softare Engineer working on all things data processing. In my most recent project I have worked on Snowflake's Query Compiler for faster incremental processing of outer joins. Earlier, I had the opportunity to work on Apache Flink's control plane both in my work at Ververica and during my PhD. At SAP, I have worked on diagnostics and replication strategies for distributed databases. The common thread in all of these is my passion to use deep system insights for simpler and more intuitive data processing. If this sounds interesting to you, feel free to reach out. &#128521;</p>
 
 </div>
