--- a/_includes/research.html
+++ b/_includes/research.html
@@ -1,7 +1,7 @@
 <!-- Research -->
 <div class="w3-container w3-card w3-white w3-margin-bottom" id="research" style="margin-top:75px">
   <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-flask fa-fw
-      w3-margin-right w3-xxlarge w3-text-teal"></i>My Research</h2>
+      w3-margin-right w3-xxlarge w3-text-teal"></i>Publications</h2>
 
 
 <ul class="publications">
