--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <!-- Navigation Bar -->
 <nav class="w3-sidebar w3-collapse w3-white w3-card w3-text-grey w3-top w3-animate-left" style="z-index:3;width:200px;overflow: hidden;" id="mySidebar"><br>
   <div class="w3-container">
-      <img src="/assets/pictures/profile1.png"
+      <img src="/assets/pictures/profile1.jpg"
       style="width:80%;" class="w3-round"><br><br>
       <div class="w3-container w3-text-black">
         <h2>Niklas Semmler</h2>
